# bookkeeping-app

./: .gitignore  README.md  pyproject.toml  startup.sh
app/: main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: company.py
app/api/v1/schemas/: client_schema.py  company_schema.py
app/data/entities/v1/: account.py  calendar.py  customer.py  self_bill_invoice.py  supplier.py
app/services/v1/: company_info.py
