[tool.poetry]
name = "bookkeeping-app"
version = "0.1.0"
description = ""
authors = ["Emilio DSouza <emiliod90@gmail.com>"]
readme = "README.md"
packages = [{include = "bookkeeping_app"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi = "^0.89.1"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
