[tool.poetry]
name = "bookkeeping-app"
version = "0.1.0"
description = ""
authors = ["Emilio DSouza <emiliod90@gmail.com>"]
readme = "README.md"
packages = [{include = "bookkeeping_app"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi = "^0.89.1"
httpx = {extras = ["http2"], version = "^0.23.3"}
selectolax = "^0.3.12"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
